tests/samples/invalid/invalid_space_before_suffix.pn
fn main() -> i32
{
	var x = 2 i32;
	return: x
}
